--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Partial/_DeleteUserRelationship.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Partial/_DeleteUserRelationship.cshtml
@@ -9,6 +9,6 @@
             @Html.HiddenFor(model => model.RequestorAccountId)
             @Html.HiddenFor(model => model.CourseId)
 
-            <input type="submit" value="Delete" class="btn btn-default" />
+            <input type="submit" value="Delete" class="btn btn-primary btn-sm" />
         </div>
     }
