--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Partial/_UserRelationships.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Partial/_UserRelationships.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<SmartRoom.Web.App_Start.UserRelationship>
 @using Microsoft.AspNet.Identity
 
-<p>
-    @* @Html.ActionLink("Create New", "Create") *@
+@*<p>
+     @Html.ActionLink("Create New", "Create") 
 </p>
-<br />
+<br />*@
 <h3 class="text-center">Course Users</h3>
 <br />
-<table class="table">
+<table class="table course-table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Account.UserName)
