--- a/SmartRoom/SmartRoom/Views/Home/Index.cshtml
+++ b/SmartRoom/SmartRoom/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 {
     @Scripts.Render("~/Scripts/Personalized/dragDrop.js")
 }
-@if (User.IsInRole("Admin"))
+@*@if (User.IsInRole("Admin"))
 {
     <ul>
         <li>@Html.ActionLink("Classroom Index", "Index", "Courses", new { Area = "Classroom" }, new { })</li>
@@ -16,7 +16,7 @@
         <li>@Html.ActionLink("YouTube Index", "Index", "YouTube", new { Area = "YouTube" }, new { })</li>
         <li>@Html.ActionLink("YouTube Create", "Create", "YouTube", new { Area = "YouTube" }, new { })</li>
         <li>@Html.ActionLink("Syllabus Create", "Create", "Syllabus", new { Area = "Forms" }, new { })</li>
-    </ul>}
+    </ul>}*@
 <ul id="sortable">
 
     @if (Model.Count() > 0)
@@ -29,7 +29,7 @@
                         @HttpUtility.HtmlDecode(Html.DisplayFor(modelItem => item.Title) + " - " + Html.DisplayFor(modelItem => item.Section))
                         <hr />
 
-                        @{List<SmartRoom.Web.App_Start.Announcement> list = item.Announcements.Where(x => x.PublishOn >= DateTime.Now).OrderBy(x => x.PublishOn).Take(3).ToList();}
+                        @{List<SmartRoom.Web.App_Start.Announcement> list = item.Announcements.Where(x => x.PublishOn >= DateTime.Now.AddDays(-1)).OrderBy(x => x.PublishOn).Take(3).ToList();}
                         @for (int i = 0; i < list.Count(); i++)
                         {
                             @Html.DisplayFor(model => list[i].PublishOn); <text> - </text>
