--- a/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Details.cshtml
+++ b/SmartRoom/SmartRoom/Areas/Classroom/Views/Courses/Details.cshtml
@@ -171,7 +171,28 @@
     </div>
 }
 
-<script>
+@section scripts{
+    <script>
+        $(document).ready(function () {
+            $("form").submit(function () { // you can use any selector that match your form
+                $.ajax({
+                    url: this.action,
+                    type: this.method,
+                    data: $(this).serialize()
+                }).done(function (data) {
+                    $('#AddUser').modal('hide');
+                    UpdateUsers();
+                    $('#alert_placeholder').html('<div class="alert alert-success" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>' + data + '</div>')
+                })
+                .fail(function (jqXHR, textStatus) {
+                    $('#alert_placeholder_adduser').html('<div class="alert alert-danger" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>' + jqXHR.responseText + '</div>')
+                })
+                ;
+                $('#alert_placeholder').html('<div class="alert alert-danger" role="alert">error</div>')
+                return false; // prevent the form submission
+            });
+        });
+
     function UpdateUsers() {
         var xmlhttp;
         if (window.XMLHttpRequest) {// code for IE7+, Firefox, Chrome, Opera, Safari
@@ -188,4 +209,5 @@
         xmlhttp.open("GET", "../GetUsers/?CourseId=" + $("#CourseId").val(), true);
         xmlhttp.send();
     }
-</script>
+    </script>
+}
